--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   </header>
   <!-- header end -->
+  
   <main class="container">
     <section class="top">
       <h2 class="top-text">Top Player</h2>
@@ -44,11 +45,48 @@
           <h3>Mujahid</h3>
         </div>
       </div>
+
       <hr class="hr">
+
+      <h2 class="top-text">Top Blog</h2>
       <div class="top-blog">
-
+        <article>
+          <div class="blog-img">
+            <img src="images/blogs/blog-1.png" alt="">
+          </div>
+          <div class="blog-text">
+            <h3>13 of My Favorite <br> UI/UX Goodies</h3>
+            <p>By <a href="#">Danny Sapio</a></p>
+          </div>
+        </article>
+        <article>
+          <div class="blog-img">
+            <img src="images/blogs/blog-2.png" alt="">
+          </div>
+          <div class="blog-text">
+            <h3>UI cheat sheet: <br> list vs grids </h3>
+            <p>By <a href="#">Tess Gadd</a></p>
+          </div>
+        </article>
+        <article>
+          <div class="blog-img">
+            <img src="images/blogs/blog-3.png" alt="">
+          </div>
+          <div class="blog-text">
+            <h3>7 typography tips <br> for interface design</h3>
+            <p>By <a href="#">Jeremiah Lam</a></p>
+          </div>
+        </article>
+        <article>
+          <div class="blog-img">
+            <img src="images/blogs/blog-4.png" alt="">
+          </div>
+          <div class="blog-text">
+            <h3>Your logo is <br> copied</h3>
+            <p>By <a href="#">Ferdinand Vogler</a></p>
+          </div>
+        </article>
       </div>
-
     </section>
   </main>
 </body>
