--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leader Board</title>
+  <!-- font awesome link -->
+  <script src="https://kit.fontawesome.com/1edf373191.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,8 +17,9 @@
 
   </header>
   <!-- header end -->
-  
+
   <main class="container">
+
     <section class="top">
       <h2 class="top-text">Top Player</h2>
       <div class="top-players">
@@ -45,6 +48,7 @@
           <h3>Mujahid</h3>
         </div>
       </div>
+
 
       <hr class="hr">
 
@@ -87,6 +91,87 @@
           </div>
         </article>
       </div>
+    </section>
+
+
+    <section class="bottom">
+      <h2 class="top-text bottom-title">Lates Course</h2>
+
+      <div class="course-cards">
+      <div class="course-card">
+        <div class="course-img">
+          <img src="images/courses/course-1.png" alt="">
+        </div>
+        <div class="course-info">
+          <h3>React - The Complete Guide 2020</h3>
+          <p class="course-author">Reed Krakoff.</p>
+        </div>
+        <div class="course-rating">
+          <div class="rating">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <div class="duration">
+            <i class="fa-regular fa-clock"></i>
+            <span>01:30 hr</span>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="course-card">
+        <div class="course-img">
+          <img src="images/courses/course-2.png" alt="">
+        </div>
+        <div class="course-info">
+          <h3>Powerpoint 2022 Master Powerpoint Cour</h3>
+          <p class="course-author">Walter Scott</p>
+        </div>
+        <div class="course-rating">
+          <div class="rating">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.3</span>
+          </div>
+          <div class="duration">
+            <i class="fa-regular fa-clock"></i>
+            <span>01:20 hr</span>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="course-card">
+        <div class="course-img">
+          <img src="images/courses/course-3.png" alt="">
+        </div>
+        <div class="course-info">
+          <h3>The Complete JavaScript Course 2022</h3>
+          <p class="course-author">Reed Krakoff.</p>
+        </div>
+        <div class="course-rating">
+          <div class="rating">
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star filled"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <div class="duration">
+            <i class="fa-regular fa-clock"></i>
+            <span>01:30 hr</span>
+          </div>
+        </div>
+      </div>
+    </div>
     </section>
   </main>
 </body>
