--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 <body>
   <!-- header start -->
   <header>
-
+    <nav>
+      <div class="idea">
+        <img src="images/icons/logo.png" alt="">
+        <a href="#">Idea</a>
+      </div>
+      <div class="navigation">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Works</a>
+          <img src="images/icons/profile.png" alt="">
+        </ul>
+      </div>
+    </nav>
   </header>
   <!-- header end -->
 
